# image_duplication

./: .gitignore  LICENSE.txt  README.md  duplication_functions.py  main.py  os_functions.py  pyproject.toml  requirements.txt  setup.py  test.py  whatever.csv
image_duplicate_finder/: __init__.py  __main__.py  duplication_functions.py  main.py
image_duplicate_finder/test/: __init__.py  test.py
image_duplicate_finder/test/test_files/org_files/documents/: Lebenslauf Vorlage Softwareentwickler.docx
org_files/documents/: g2_minimod_readme - Kopie.html.doc
org_files/trash/: duplication_functions.py  main.py
picture_duplicates/: constants.py  duplication_functions.py  main.py  os_functions.py
